# Chess-History-Finder

./: .gitignore  BTree.cpp  BTree.h  Board.cpp  Board.h  BoardStorage.cpp  BoardStorage.h  CMakeLists.txt  ChessBinaryRep.h  ChessHistoryFinder.cpp  ChessHistoryFinder.h  Defines.h  GUI.cpp  GUI.h  Heap.cpp  Heap.h  HeapSort.h  NextMove.h  Node.h  PgnPreprocessor.cpp  PgnPreprocessor.h  README.md  TextureManager.cpp  TextureManager.h  ZobristHash.cpp  ZobristHash.h  main.cpp
